hphp/hack/test/typecheck/reactive/mayberx2.php
<?hh // strict

// ERROR, __OnlyRxIfRxFunc can only appear on parameters of
// conditionally reactive functions
<<__OnlyRxIfRxFunc>>
function f(): void {
}
